<resources>
    <string name="app_name">Steam Achievements</string>
    <string name="abbr_minutes">m</string>
    <string name="abbr_hours">h</string>
    <string name="action_sort">SORT</string>
    <string name="action_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_library">Library</string>
    <string name="menu_achievements">Achievements</string>
    <string name="percentage">%s%%</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_sort_playtime">Playtime</string>
    <string name="menu_sort_name">Name</string>
    <string name="menu_sort_completion">Completion</string>
    <string name="header_playtime">Playtime</string>
    <string name="header_recent_playtime">Recent playtime:</string>
    <string name="header_total_playtime">Total playtime:</string>
    <string name="header_achievements">Achievements</string>
    <string name="sorting_method_achieved">Sorted by: Achieved</string>
    <string name="header_achievements_over_time">Achievements over time</string>
    <string name="label_achievement_completion">Completion</string>
    <string name="contentDescAchievIcon">Achievement icon.</string>
    <string name="label_placeholder">Label placeholder</string>
    <string name="value_placeholder">Value placeholder</string>
    <string name="textview_label_contentDesc">Label for the below defined value.</string>
    <string name="label_global_achievement_rate">Global achievement rate</string>
    <string name="sorting_order_achieved_name">Latest</string>
    <string name="sorting_order_not_achieved">Chronological</string>
    <string name="sorting_order_rarity">Rarity</string>
    <string name="header_progress">Progress</string>
    <string name="achievements_completed_percentage">%1$s (%2$s/%3$s) achievements.</string>
    <string name="achievements_size">%s achievements.</string>
    <string name="achievements_none">No achievements.</string>
    <string name="pattern_decimal">0.##</string>
    <string name="header_news">News</string>
    <string name="alert_no_news">No recent news available</string>
    <string name="lorem_ipsum_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur et purus ac nunc scelerisque consectetur at vitae erat. Aliquam erat volutpat. Mauris tincidunt, justo non scelerisque vulputate, sapien nibh pharetra massa, in finibus erat lectus et diam. Integer dignissim quam id mi porttitor accumsan. Donec a urna eget augue congue hendrerit convallis quis odio. Vestibulum convallis euismod tortor ullamcorper vehicula. Integer et malesuada diam. Morbi et velit odio. Duis tempor libero commodo est pharetra pulvinar. Nam vulputate ipsum non ligula tincidunt, a feugiat ipsum dapibus. Pellentesque eu neque id nisi consequat tempor. Suspendisse blandit mauris eu felis varius porta. Integer fringilla auctor magna sit amet rutrum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque facilisis justo volutpat turpis finibus, sed viverra massa vulputate. Aliquam quis diam mi. Nunc elementum justo vel ligula egestas, ac imperdiet turpis finibus. Maecenas vehicula condimentum enim, et elementum augue. Aenean quis mauris in nisi efficitur viverra non nec neque. Cras consectetur pharetra sem, sit amet ornare ante mattis ac. Morbi lacinia tempus elit, vel interdum massa aliquet sed. Pellentesque pulvinar, nunc quis hendrerit pellentesque, nisl turpis laoreet mauris, in aliquam urna justo at ipsum. Vivamus massa velit, consequat sed tellus quis, tincidunt rhoncus ex. Duis rhoncus nibh iaculis est eleifend commodo.</string>
    <string name="format_limiter_more">%1$s.. [%2$s]</string>
    <string name="button_more">more…</string>
</resources>
