<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menuSortPlaytime"
                android:title="@string/menu_sort_playtime" />
            <item
                android:id="@+id/menuSortName"
                android:title="@string/menu_sort_name" />
            <item
                android:id="@+id/menuSortCompletion"
                android:title="@string/menu_sort_completion" />
        </menu>
    </item>
</menu>